Написаны конвертеры для .emf и .wmf изображений.